# snakesss

./: Cargo.toml  README.md
src/: color.rs  config.rs  food.rs  game.rs  main.rs  position.rs  snake.rs
